--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="icon" href="%PUBLIC_URL%/dashboard-33x33.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#f1f1f1" />
     <meta name="description" content="Social Media Dashboard" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/dashboard-33x33.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
